--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -86,25 +86,18 @@
             <tr>
                 <th></th>
                 <th>ID</th>
-                <th>Имя</th>
-                <th>Фамилия</th>
-                <th>Отчество</th>
-                <th>Роль</th>
-                <th>Используемый логин</th>
+                <th>Название заказа</th>
+                <th>Цена</th>
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="user: ${pagination_users}">
-                <tr th:data-id="${user.getId()}" th:data-firstname="${user.getFirstName()}"
-                    th:data-surname="${user.getSurName()}" th:data-lastname="${user.getLastName()}"
-                    th:data-role="${user.getRoles().getTitle()}" th:data-profile="${user.getProfile().getLogin()}">
+            <th:block th:each="order: ${ordersList}">
+                <tr th:data-id="${order.getId()}" th:data-firstname="${order.getTitle()}"
+                    th:data-surname="${order.getPrice()}">
                     <td><input type="checkbox" class="selectRow"/></td>
-                    <td th:text="${user.getId()}"></td>
-                    <td th:text="${user.getFirstName()}"></td>
-                    <td th:text="${user.getSurName()}"></td>
-                    <td th:text="${user.getLastName()}"></td>
-                    <td th:text="${user.getRoles().getTitle()}"></td>
-                    <td th:text="${user.getProfile().getLogin()}"></td>
+                    <td th:text="${order.getId()}"></td>
+                    <td th:text="${order.getTitle()}"></td>
+                    <td th:text="${order.getPrice()}"></td>
                 </tr>
             </th:block>
             </tbody>
@@ -123,20 +116,9 @@
         <header>
             <h2>Создание пользователя</h2>
         </header>
-        <form class="createUser form-inline" method="POST" action="/users/add" id="userForm" th:object="${user}">
-            <input placeholder="Имя" id="firstname" th:field="*{firstName}" required>
-            <input placeholder="Фамилия" id="surname" th:field="*{surName}" required>
-            <input placeholder="Отчество" required th:field="*{lastName}">
-            <label for="category">Роль</label>
-            <select class="form-control" id="category" name="roles.id" required>
-                <option th:each="role : ${roles}" th:value="${role.getId()}"
-                        th:text="${role.getTitle()}"></option>
-            </select>
-            <label for="profile">Роль</label>
-            <select class="form-control" id="profile" name="profile.id" required>
-                <option th:each="profile : ${profiles}" th:value="${profile.getId()}"
-                        th:text="${profile.getLogin()}"></option>
-            </select>
+        <form class="createUser form-inline" method="POST" action="/orders/add" id="userForm" th:object="${order}">
+            <input placeholder="Название заказа" id="firstname" th:field="*{title}" required>
+            <input placeholder="Цена" id="surname" type="number" th:field="*{price}" required>
             <button type="submit" formmethod="post">Создать</button>
         </form>
     </div>
@@ -145,22 +127,11 @@
         <header>
             <h2>Обновление пользователя</h2>
         </header>
-        <form class="updateUser form-inline" method="POST" action="/users/update" id="updateUserForm"
-              th:object="${user}">
+        <form class="updateUser form-inline" method="POST" action="/orders/update" id="updateUserForm"
+              th:object="${order}">
             <input type="hidden" name="id" id="updateUserId" th:field="*{id}"/>
-            <input placeholder="Имя" id="updateFirstname" th:field="*{firstName}" required>
-            <input placeholder="Фамилия" id="updateSurname" th:field="*{surName}" required>
-            <input placeholder="Отчество" required th:field="*{lastName}" id="updateLastname">
-            <label for="updateRole">Роль</label>
-            <select class="form-control" id="updateRole" name="roles.id" required>
-                <option th:each="role : ${roles}" th:value="${role.getId()}"
-                        th:text="${role.getTitle()}"></option>
-            </select>
-            <label for="updateProfile">Роль</label>
-            <select class="form-control" id="updateProfile" name="profile.id" required>
-                <option th:each="profile : ${profiles}" th:value="${profile.getId()}"
-                        th:text="${profile.getLogin()}"></option>
-            </select>
+            <input placeholder="Название заказа" th:field="*{title}" required id="updateFirstname">
+            <input placeholder="Цена" th:field="*{price}" required id="updateSurname">
             <button type="submit" formmethod="post">Обновить</button>
         </form>
     </div>
@@ -186,10 +157,6 @@
             document.getElementById('updateUserId').value = this.getAttribute('data-id');
             document.getElementById('updateFirstname').value = this.getAttribute('data-firstname');
             document.getElementById('updateSurname').value = this.getAttribute('data-surname');
-            document.getElementById('updateLastname').value = this.getAttribute('data-lastname');
-
-            selectElement('updateRole', this.getAttribute('data-role'));
-            selectElement('updateProfile', this.getAttribute('data-profile'));
         });
     });
     document.getElementById('delete').addEventListener('click', function() {
@@ -201,7 +168,7 @@
         return;
     }
 
-    fetch('/users/delete', {
+    fetch('/orders/delete', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
