--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -86,25 +86,18 @@
             <tr>
                 <th></th>
                 <th>ID</th>
-                <th>Имя</th>
-                <th>Фамилия</th>
-                <th>Отчество</th>
-                <th>Роль</th>
-                <th>Используемый логин</th>
+                <th>Логин</th>
+                <th>Пароль</th>
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="user: ${pagination_users}">
-                <tr th:data-id="${user.getId()}" th:data-firstname="${user.getFirstName()}"
-                    th:data-surname="${user.getSurName()}" th:data-lastname="${user.getLastName()}"
-                    th:data-role="${user.getRoles().getTitle()}" th:data-profile="${user.getProfile().getLogin()}">
+            <th:block th:each="profilse: ${profilesList}">
+                <tr th:data-id="${profilse.getId()}" th:data-login="${profilse.getLogin()}"
+                    th:data-password="${profilse.getPassword()}">
                     <td><input type="checkbox" class="selectRow"/></td>
-                    <td th:text="${user.getId()}"></td>
-                    <td th:text="${user.getFirstName()}"></td>
-                    <td th:text="${user.getSurName()}"></td>
-                    <td th:text="${user.getLastName()}"></td>
-                    <td th:text="${user.getRoles().getTitle()}"></td>
-                    <td th:text="${user.getProfile().getLogin()}"></td>
+                    <td th:text="${profilse.getId()}"></td>
+                    <td th:text="${profilse.getLogin()}"></td>
+                    <td th:text="${profilse.getPassword()}"></td>
                 </tr>
             </th:block>
             </tbody>
@@ -123,20 +116,9 @@
         <header>
             <h2>Создание пользователя</h2>
         </header>
-        <form class="createUser form-inline" method="POST" action="/users/add" id="userForm" th:object="${user}">
-            <input placeholder="Имя" id="firstname" th:field="*{firstName}" required>
-            <input placeholder="Фамилия" id="surname" th:field="*{surName}" required>
-            <input placeholder="Отчество" required th:field="*{lastName}">
-            <label for="category">Роль</label>
-            <select class="form-control" id="category" name="roles.id" required>
-                <option th:each="role : ${roles}" th:value="${role.getId()}"
-                        th:text="${role.getTitle()}"></option>
-            </select>
-            <label for="profile">Роль</label>
-            <select class="form-control" id="profile" name="profile.id" required>
-                <option th:each="profile : ${profiles}" th:value="${profile.getId()}"
-                        th:text="${profile.getLogin()}"></option>
-            </select>
+        <form class="createUser form-inline" method="POST" action="/profiles/add" id="userForm" th:object="${profile}">
+            <input placeholder="Логин" id="login" th:field="*{login}" required>
+            <input placeholder="Пароль" id="password" th:field="*{password}" required>
             <button type="submit" formmethod="post">Создать</button>
         </form>
     </div>
@@ -145,37 +127,17 @@
         <header>
             <h2>Обновление пользователя</h2>
         </header>
-        <form class="updateUser form-inline" method="POST" action="/users/update" id="updateUserForm"
-              th:object="${user}">
+        <form class="updateUser form-inline" method="POST" action="/profiles/update" id="updateUserForm"
+              th:object="${profile}">
             <input type="hidden" name="id" id="updateUserId" th:field="*{id}"/>
-            <input placeholder="Имя" id="updateFirstname" th:field="*{firstName}" required>
-            <input placeholder="Фамилия" id="updateSurname" th:field="*{surName}" required>
-            <input placeholder="Отчество" required th:field="*{lastName}" id="updateLastname">
-            <label for="updateRole">Роль</label>
-            <select class="form-control" id="updateRole" name="roles.id" required>
-                <option th:each="role : ${roles}" th:value="${role.getId()}"
-                        th:text="${role.getTitle()}"></option>
-            </select>
-            <label for="updateProfile">Роль</label>
-            <select class="form-control" id="updateProfile" name="profile.id" required>
-                <option th:each="profile : ${profiles}" th:value="${profile.getId()}"
-                        th:text="${profile.getLogin()}"></option>
-            </select>
+            <input placeholder="Логин" th:field="*{login}" required id="updateLogin">
+            <input placeholder="Пароль" th:field="*{password}" required id="updatePassword">
             <button type="submit" formmethod="post">Обновить</button>
         </form>
     </div>
 </div>
 
 <script>
-    function selectElement(id, data) {
-        let select = document.getElementById(id);
-        for(var a = 0; a < select.length; a++){
-            if(select.options[a].text == data){
-                select.value = select.options[a].value;
-            }
-        }
-
-    }
     document.querySelector('#selectAll').addEventListener('change', function() {
         document.querySelectorAll('.selectRow').forEach(checkbox => checkbox.checked = this.checked);
     });
@@ -184,12 +146,8 @@
         row.addEventListener('click', function() {
             // Для обновления
             document.getElementById('updateUserId').value = this.getAttribute('data-id');
-            document.getElementById('updateFirstname').value = this.getAttribute('data-firstname');
-            document.getElementById('updateSurname').value = this.getAttribute('data-surname');
-            document.getElementById('updateLastname').value = this.getAttribute('data-lastname');
-
-            selectElement('updateRole', this.getAttribute('data-role'));
-            selectElement('updateProfile', this.getAttribute('data-profile'));
+            document.getElementById('updateLogin').value = this.getAttribute('data-login');
+            document.getElementById('updatePassword').value = this.getAttribute('data-password');
         });
     });
     document.getElementById('delete').addEventListener('click', function() {
@@ -201,7 +159,7 @@
         return;
     }
 
-    fetch('/users/delete', {
+    fetch('/profiles/delete', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
