--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -77,7 +77,7 @@
 <div class="body">
     <div class="content">
         <header>
-            <h2>Список пользователей</h2>
+            <h2>Список заказов</h2>
             <input type="checkbox" id="selectAll"/> Выбрать всех
             <button id="delete">Удалить</button>
         </header>
@@ -114,7 +114,7 @@
     </div>
     <div class="content">
         <header>
-            <h2>Создание пользователя</h2>
+            <h2>Список заказов</h2>
         </header>
         <form class="createUser form-inline" method="POST" action="/orders/add" id="userForm" th:object="${order}">
             <input placeholder="Название заказа" id="firstname" th:field="*{title}" required>
@@ -125,7 +125,7 @@
 
     <div class="content">
         <header>
-            <h2>Обновление пользователя</h2>
+            <h2>Обновление заказа</h2>
         </header>
         <form class="updateUser form-inline" method="POST" action="/orders/update" id="updateUserForm"
               th:object="${order}">
