--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -64,15 +64,76 @@
         .form-inline input {
             width: 150px;
         }
+              .pagination {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+            padding: 20px 0;
+            background-color: #1e1e1e;
+            border-radius: 8px;
+            margin-top: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .pagination-button {
+            padding: 10px 20px;
+            background-color: #2b2b2b;
+            color: #e0e0e0;
+            text-decoration: none;
+            font-size: 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            display: inline-block;
+        }
+
+        .pagination-button:hover {
+            background-color: #555;
+            color: #ffffff;
+        }
+
+        .pagination-button.prev::before {
+            content: '← ';
+        }
+
+        .pagination-button.next::after {
+            content: ' →';
+        }
+
+        .pagination-info {
+            color: #e0e0e0;
+            font-size: 1.1rem;
+            font-weight: bold;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table, th, td {
+            border: 1px solid #555;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: center; /* Горизонтальное выравнивание */
+            vertical-align: middle; /* Вертикальное выравнивание */
+            font-size: 16px; /* Увеличенный размер текста */
+        }
+
+        th {
+            background-color: #3b3b3b;
+            font-size: 18px; /* Размер текста для заголовков чуть больше */
+        }
     </style>
 </head>
 <body>
 <header>
-    <a href="/">Назад</a>
-    <form method="GET" id="search">
-        <input placeholder="Поиск по имени" name="firstname"/>
-        <button>Поиск</button>
-    </form>
+    <a href="/logout">Выйти</a>
+    <a href="/carsList/all">Список машин</a>
+    <a href="/servicesList/all">Список услуг</a>
+    <a href="/providersList/all">Список поставщиков</a>
 </header>
 <div class="body">
     <div class="content">
@@ -85,79 +146,58 @@
             <thead>
             <tr>
                 <th></th>
-                <th>ID</th>
-                <th>Название заказа</th>
-                <th>Цена</th>
+                <th>ID пользователя</th>
+                <th>ID заказа</th>
+                <th>Название машины</th>
+                <th>Цена заказа</th>
+                <th>Дата заказа</th>
+                <th>Услуги к заказу</th>
             </tr>
             </thead>
             <tbody>
-            <th:block th:each="order: ${ordersList}">
-                <tr th:data-id="${order.getId()}" th:data-firstname="${order.getTitle()}"
-                    th:data-surname="${order.getPrice()}">
-                    <td><input type="checkbox" class="selectRow"/></td>
-                    <td th:text="${order.getId()}"></td>
-                    <td th:text="${order.getTitle()}"></td>
-                    <td th:text="${order.getPrice()}"></td>
-                </tr>
+            <th:block th:each="order: ${orders.getCurrentItems()}">
+                <th:block th:each="user: ${order.users}">
+                    <tr th:data-id="${order.getId()}">
+                        <td><input type="checkbox" class="selectRow"/></td>
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${order.id}"></td>
+                        <td th:text="${order.getCars().getTitle()}"></td>
+                        <td th:text="${order.getCars().getPrice()}"></td>
+                        <td th:text="${order.date}"></td>
+                        <td>
+                            <ul>
+                                <li th:each="service: ${order.getServices()}" th:text="${service.title}"></li>
+                            </ul>
+                        </td>
+                    </tr>
+                </th:block>
             </th:block>
             </tbody>
         </table>
-        <!--        <div class="pagination">-->
-        <!--            <th:block th:if="${pagination_users.getCurrentPage() > 1}">-->
-        <!--                <a th:href="@{/users?(page=${pagination_users.getCurrentPage() - 1})}"><</a>-->
-        <!--            </th:block>-->
-        <!--            <p th:text="|${pagination_users.getCurrentPage()}|"></p>-->
-        <!--            <th:block th:if="${pagination_users.getCurrentPage() < pagination_users.getTotalNumberPages()}">-->
-        <!--                <a th:href="@{/users?(page=${pagination_users.getCurrentPage() + 1})}">></a>-->
-        <!--            </th:block>-->
-        <!--        </div>-->
-    </div>
-    <div class="content">
-        <header>
-            <h2>Список заказов</h2>
-        </header>
-        <form class="createUser form-inline" method="POST" action="/orders/add" id="userForm" th:object="${order}">
-            <input placeholder="Название заказа" id="firstname" th:field="*{title}" required>
-            <input placeholder="Цена" id="surname" type="number" th:field="*{price}" required>
-            <button type="submit" formmethod="post">Создать</button>
-        </form>
-    </div>
-
-    <div class="content">
-        <header>
-            <h2>Обновление заказа</h2>
-        </header>
-        <form class="updateUser form-inline" method="POST" action="/orders/update" id="updateUserForm"
-              th:object="${order}">
-            <input type="hidden" name="id" id="updateUserId" th:field="*{id}"/>
-            <input placeholder="Название заказа" th:field="*{title}" required id="updateFirstname">
-            <input placeholder="Цена" th:field="*{price}" required id="updateSurname">
-            <button type="submit" formmethod="post">Обновить</button>
-        </form>
+        <div class="pagination">
+            <th:block th:if="${orders.getCurrentPage() > 1}">
+                <a th:href="@{/orders/all?(page=${orders.getCurrentPage() - 1})}"
+                   class="pagination-button prev">
+                    Предыдущая
+                </a>
+            </th:block>
+            <p class="pagination-info">
+                Страница <span th:text="${orders.getCurrentPage()}"></span> из <span
+                    th:text="${orders.getTotalNumberPages()}"></span>
+            </p>
+            <th:block th:if="${orders.getCurrentPage() < orders.getTotalNumberPages()}">
+                <a th:href="@{/orders/all?(page=${orders.getCurrentPage() + 1})}"
+                   class="pagination-button next">
+                    Следующая
+                </a>
+            </th:block>
+        </div>
     </div>
 </div>
-
 <script>
-    function selectElement(id, data) {
-        let select = document.getElementById(id);
-        for(var a = 0; a < select.length; a++){
-            if(select.options[a].text == data){
-                select.value = select.options[a].value;
-            }
-        }
 
-    }
     document.querySelector('#selectAll').addEventListener('change', function() {
         document.querySelectorAll('.selectRow').forEach(checkbox => checkbox.checked = this.checked);
-    });
-
-    document.querySelectorAll('tbody tr').forEach(row => {
-        row.addEventListener('click', function() {
-            // Для обновления
-            document.getElementById('updateUserId').value = this.getAttribute('data-id');
-            document.getElementById('updateFirstname').value = this.getAttribute('data-firstname');
-            document.getElementById('updateSurname').value = this.getAttribute('data-surname');
-        });
     });
     document.getElementById('delete').addEventListener('click', function() {
     const selectedIds = Array.from(document.querySelectorAll('.selectRow:checked'))
@@ -188,8 +228,7 @@
         console.error('Ошибка:', error);
         alert('Произошла ошибка при удалении пользователей.');
     });
-});
+  });
 </script>
-
 </body>
 </html>
