--- a/src/main/resources/templates/servicesList.html
+++ b/src/main/resources/templates/servicesList.html
@@ -65,46 +65,46 @@
             width: 150px;
         }
         .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    padding: 20px 0;
-    background-color: #1e1e1e;
-    border-radius: 8px;
-    margin-top: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+            padding: 20px 0;
+            background-color: #1e1e1e;
+            border-radius: 8px;
+            margin-top: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
 
-.pagination-button {
-    padding: 10px 20px;
-    background-color: #2b2b2b;
-    color: #e0e0e0;
-    text-decoration: none;
-    font-size: 1rem;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    display: inline-block;
-}
+        .pagination-button {
+            padding: 10px 20px;
+            background-color: #2b2b2b;
+            color: #e0e0e0;
+            text-decoration: none;
+            font-size: 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            display: inline-block;
+        }
 
-.pagination-button:hover {
-    background-color: #555;
-    color: #ffffff;
-}
+        .pagination-button:hover {
+            background-color: #555;
+            color: #ffffff;
+        }
 
-.pagination-button.prev::before {
-    content: '← ';
-}
+        .pagination-button.prev::before {
+            content: '← ';
+        }
 
-.pagination-button.next::after {
-    content: ' →';
-}
+        .pagination-button.next::after {
+            content: ' →';
+        }
 
-.pagination-info {
-    color: #e0e0e0;
-    font-size: 1.1rem;
-    font-weight: bold;
-}
+        .pagination-info {
+            color: #e0e0e0;
+            font-size: 1.1rem;
+            font-weight: bold;
+        }
 
     </style>
 </head>
@@ -113,6 +113,7 @@
     <a href="/logout">Выйти</a>
     <a href="/carsList/all">Список машин</a>
     <a href="/providersList/all">Список поставщиков</a>
+    <a href="/orders/all">Список заказов</a>
 </header>
 <div class="body">
     <div class="content">
